# serializer version: 1
# name: test_groups_and_users
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_groups_and_users.1
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 1,
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_groups_and_users.2
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'zclark',
    'id': 2,
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_groups_and_users[job]
  dict({
    'args': dict({
    }),
    'claim': dict({
      'cpu': 1.0,
      'image': 'virtool/fake:latest',
      'mem': 1.0,
      'runner_id': 'fake-runner',
      'runtime_version': '0.0.0',
      'workflow_version': '0.0.0',
    }),
    'claimed_at': datetime,
    'created_at': datetime,
    'id': 1,
    'pinged_at': datetime,
    'progress': 100,
    'state': <JobState.SUCCEEDED: 'succeeded'>,
    'steps': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': <Workflow.BUILD_INDEX: 'build_index'>,
  })
# ---
# name: test_jobs[job]
  dict({
    'args': dict({
    }),
    'claim': dict({
      'cpu': 1.0,
      'image': 'virtool/fake:latest',
      'mem': 1.0,
      'runner_id': 'fake-runner',
      'runtime_version': '0.0.0',
      'workflow_version': '0.0.0',
    }),
    'claimed_at': datetime,
    'created_at': datetime,
    'id': 1,
    'pinged_at': datetime,
    'progress': 100,
    'state': <JobState.SUCCEEDED: 'succeeded'>,
    'steps': None,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': <Workflow.NUVS: 'nuvs'>,
  })
# ---
# name: test_subtractions
  dict({
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/1/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/1/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/1/files/subtraction.3.bt2',
        'id': 3,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/1/files/subtraction.4.bt2',
        'id': 4,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/1/files/subtraction.fa.gz',
        'id': 5,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': 1,
        'type': 'fasta',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/1/files/subtraction.rev.1.bt2',
        'id': 6,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/1/files/subtraction.rev.2.bt2',
        'id': 7,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': 1,
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 1,
    'job': dict({
      'created_at': 'approximately_now_datetime',
      'id': 1,
      'progress': 0,
      'state': <JobState.PENDING: 'pending'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': <Workflow.CREATE_SUBTRACTION: 'create_subtraction'>,
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'upload': dict({
      'created_at': 'approximately_now_datetime',
      'id': 1,
      'name': 'foobar.fq.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 723988,
      'type': 'subtraction',
      'uploaded_at': 'approximately_now_datetime',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_uploads[upload[reserved]]
  dict({
    'created_at': datetime,
    'id': 3,
    'name': 'test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': True,
    'size': 723988,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_uploads[upload[subtraction]]
  dict({
    'created_at': datetime,
    'id': 2,
    'name': 'test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 723988,
    'type': 'subtraction',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_uploads[upload]
  dict({
    'created_at': datetime,
    'id': 1,
    'name': 'test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 723988,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
